--- a/src/main/resources/AuthWindow.fxml
+++ b/src/main/resources/AuthWindow.fxml
@@ -9,7 +9,7 @@
 
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="client.GUI.AuthController">
+      fx:controller="client.GUI.Controllers.AuthController">
     <children>
         <TextField fx:id="userField" layoutX="208" layoutY="33">
             <font>
