--- a/src/main/resources/ClientPanel.fxml
+++ b/src/main/resources/ClientPanel.fxml
@@ -26,3 +26,20 @@
         </padding>
     </HBox>
 </VBox>
+
+
+<!--<HBox>-->
+<!--<ComboBox fx:id="disksBox" onAction="#selectDiskAction"/>-->
+<!--<TextField fx:id="pathField" editable="false" HBox.hgrow="ALWAYS"/>-->
+<!--<Button text="Вверх" onAction="#btnPathUpAction"/>-->
+<!--</HBox>-->
+<!--<TableView fx:id="filesTable" VBox.vgrow="ALWAYS"/>-->
+
+<!--<HBox spacing="5">-->
+<!--<Button maxWidth="Infinity" focusTraversable="false" text="Загрузить файл в облако" HBox.hgrow="ALWAYS" onAction="#btnLoadFile"/>-->
+<!--<Button maxWidth="Infinity" focusTraversable="false" text="Удалить файл" HBox.hgrow="ALWAYS" onAction="#btnFileDelete"/>-->
+<!--<Button maxWidth="Infinity" focusTraversable="false" text="Обновить" HBox.hgrow="ALWAYS" onAction="#btnUpd"/>-->
+<!--<padding>-->
+<!--    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>-->
+<!--</padding>-->
+<!--</HBox>-->
