--- a/src/main/resources/ClientPanel.fxml
+++ b/src/main/resources/ClientPanel.fxml
@@ -9,7 +9,7 @@
 
 <?import javafx.geometry.Insets?>
 <VBox alignment="center" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal"
-      fx:controller="client.GUI.ClientPanelController">
+      fx:controller="client.GUI.Controllers.ClientPanelController">
     <HBox>
         <ComboBox fx:id="disksBox" onAction="#selectDiskAction"/>
         <TextField fx:id="pathField" editable="false" HBox.hgrow="ALWAYS"/>
