--- a/src/main/resources/CloudPanel.fxml
+++ b/src/main/resources/CloudPanel.fxml
@@ -5,7 +5,7 @@
 
 <?import javafx.geometry.Insets?>
 <VBox alignment="center" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal"
-      fx:controller="client.GUI.CloudPanelController">
+      fx:controller="client.GUI.Controllers.CloudPanelController">
     <HBox>
         <TextField fx:id="pathField" editable="false" HBox.hgrow="ALWAYS"/>
         <Button text="Вверх" onAction="#btnPathUpAction"/>
@@ -28,7 +28,7 @@
 
 
 <!--<VBox alignment="center" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal"-->
-<!--      fx:controller="client.GUI.CloudPanelController">-->
+<!--      fx:controller="client.GUI.Controllers.CloudPanelController">-->
 <!--<HBox>-->
 <!--    <TextField fx:id="pathField" editable="false" HBox.hgrow="ALWAYS"/>-->
 <!--    <Button text="Вверх" onAction="#btnPathUpAction"/>-->
